# docker-spark

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  spark-defaults.conf
gcp_gitsync_pyspark/: Dockerfile  entrypoint.sh  pyproject.toml
gcp_gitsync_pyspark/jobs/: sample.csv  sample_job.py
